Fix soft keyboard pop up on iOS

--- a/src/app/voting-view/voting-view.component.css
+++ b/src/app/voting-view/voting-view.component.css
@@ -11,12 +11,19 @@
 }
 
 .votingContainer {
-  position: fixed;
+  position: absolute;
   word-break: keep-all;
-  width: 100%;
+  width: 100vw;
   height: 100%;
 }
 
+.customVotingContainer {
+  position: absolute;
+  word-break: keep-all;
+  width: 100vw;
+  height: 100%;
+  overflow: hidden;
+}
 
 
 
@@ -214,9 +221,10 @@
 }
 
 .opinion-form-container {
-  position: relative;
+  position: absolute;
   width: 100%;
-  margin-top: 20%;
+  margin-bottom: 10%;
+  bottom: 0;
 }
 .opinion-form {
   position: relative;
